--- a/README.Rmd
+++ b/README.Rmd
@@ -16,7 +16,10 @@ knitr::opts_chunk$set(
  
 ```
 
-# aorsf
+# aorsf <a href="https://bcjaeger.github.io/aorsf"><img src="man/figures/logo.png" align="right" height="138" /></a>
+
+
+
 
 <!-- badges: start -->
 [![Project Status: WIP – Initial development is in progress, but there has not yet been a stable, usable release suitable for the public.](https://www.repostatus.org/badges/latest/wip.svg)](https://www.repostatus.org/#wip)
