--- a/README.Rmd
+++ b/README.Rmd
@@ -60,7 +60,7 @@ The `orsf()` function is used to fit ORSFs. Printing the output from `orsf()` wi
 
 library(aorsf)
 
-fit <- orsf(data_train = pbc_orsf,
+fit <- orsf(data = pbc_orsf,
             formula = Surv(time, status) ~ . - id)
 
 print(fit)
